# homework_10_

./: README.md  pyproject.toml
htmlcov/: index.html
src/: decorators.py  external_api.py  masks.py  utils.py
src/htmlcov/: index.html
tests/: test_decorators.py  test_external_api.py  test_masks.py
