[tool.poetry]
name = "hmwrk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "==2.1.3"
click = "==8.2.1"
platformdirs = "==4.3.8"
requests = "==2.32.4"
python-dotenv = "^1.1.0"
mypy = "==1.16.0"
coverage = "==7.9.0"
pytest = "==8.4.0"
typing-extensions = "==4.14.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
line_length = 119

[tool.pytest.ini_options]
pythonpath = ["."]